# poprox-storage

./: .pre-commit-config.yaml  README.md  package-lock.json  pyproject.toml  table_integration.py
.github/workflows/: run-tests.yml
dev/: compose.yaml  example-test.py  init_poprox_dev.ps1  init_poprox_dev.sh  make_dump.sh  stop_poprox_dev.sh  test_scrape_article.py
dev/db/: password.txt
dev/scraped-articles/: apnews_articles_2024-08-09_16-19-02.csv  apnews_articles_2024-08-16_14-22-20.csv
poprox-db/: alembic.ini  compose.yaml  requirements-dev.txt  test.sh
poprox-db/db/: password.txt
poprox-db/migrations/: env.py
poprox-db/migrations/versions/: 2024_04_11_1410-b84ba9163a5d_create_account_table.py  2024_04_12_1344-1496108a1b16_create_article_table.py  2024_04_12_1346-6502e43e4cf6_create_newsletter_table.py  2024_05_07_0930-519655a72d7c_create_impression_table.py  2024_05_08_0931-a5be6e14d5ff_create_click_log_table.py  2024_05_14_1531-7784f1ca77d3_add_entity_table.py  2024_05_14_1540-8c2b0c4c3ae5_add_article_entity_table.py  2024_05_16_0833-12db57e34931_pluralize_table_names.py  2024_05_22_1251-abbe1a8bef82_create_experiments_table.py  2024_05_22_1259-b4e38c35ad49_create_experiment_sub_tables.py  2024_05_22_1305-aad7bde678ba_create_experiment_treatments_table.py  2024_05_22_1309-adb103cc5e10_create_experiment_allocations_table.py  2024_06_03_1224-5111c14454e5_create_subscription_table.py  2024_06_06_1548-10b32c41ed65_create_user_feature_preferences_table.py  2024_06_14_1112-ddf8de4a8fa5_add_account_status_field.py  2024_06_14_1117-185dacfa54c0_add_consent_log_for_tracking_consent_at_.py  2024_07_01_0910-b705c3374dfa_add_raw_data_column_to_articles_table.py  2024_07_05_1029-8fa118cae13f_add_article_images_table.py  2024_07_05_1440-5231010a6b14_create_table_to_track_qualtic_surveys.py  2024_07_05_1450-fefa750f5281_create_table_to_track_qualtic_surveys_.py  2024_07_05_1457-14be38931ae0_create_table_to_track_qualtic_survey_.py  2024_07_10_1533-5d566fff8aaa_add_preview_image_url_column_to_.py  2024_07_26_0945-fc8d79481ee4_merge_head_revisions.py  2024_07_26_0947-53fc350d4cd3_rename_expt_allocations_to_expt_.py  2024_07_26_0953-211c6b3ac5de_add_opt_out_column_to_experiment_.py  2024_07_26_1019-c367e5f6fe3a_create_teams_table.py  2024_07_26_1020-3e73b9c0cd35_create_team_memberships_table.py  2024_07_26_1021-e621ac2d0165_add_team_id_column_to_experiments_table.py  2024_07_26_1022-653b309492ae_create_datasets_table.py  2024_07_26_1023-5cb85d4ee044_create_account_aliases_table.py  2024_07_26_1024-085f4b0b94a6_add_dataset_id_column_to_experiments_.py  2024_07_26_1352-98ff1c3ebe33_add_web_login_table.py  2024_07_29_1338-f5973e9cf00f_merge_revisions_heads.py  2024_07_29_1547-e63a0a91de19_add_headers_field_to_click_tracking.py  2024_07_30_0941-23409beee637_.py  2024_08_16_1320-db45222a34e2_add_email_subject_to_newsletter_table.py  2024_08_21_1418-dd50d8e7777e_rename_article_headline_and_subhead.py  2024_08_21_1639-4fc4a6030444_create_scraped_articles_table.py  (+85 more)
poprox-db/tests/: conftest.py  test_create_scrape_table.py  test_stairstep.py
src/poprox_storage/: paths.py
tests/: __init__.py  conftest.py  test_clicks.py  test_create_placement_table.py  test_create_scrape_table.py  test_injection.py  test_newsletters.py  test_placements.py  test_qualtrics_survey_repository.py  test_repositories.py
tests/concepts/: test_manifest.py
tests/data/: sample_manifest.toml
tests/repositories/: test_clicks.py  test_experiences.py  test_experiments.py  test_newsletters.py  test_qualtrics_survey.py
(+35 files in other folders)
